--- a/src/app/pages/team-page/team-page.component.scss
+++ b/src/app/pages/team-page/team-page.component.scss
@@ -4,3 +4,22 @@
   border-radius: 5px;
   padding: 30px;
 }
+
+// .table-font-size-header {
+//   font-size: 30px !important;
+// }
+
+th {
+  background-color: #b1c2de !important;
+}
+.table-font-size-header {
+  font-size: 30px;
+}
+
+.table-font-size-data {
+  font-size: 15px;
+}
+
+.table-font-bold {
+  font-weight: bold;
+}
