--- a/src/app/pages/leader-page/leader-page.component.scss
+++ b/src/app/pages/leader-page/leader-page.component.scss
@@ -14,11 +14,11 @@ th {
 }
 
 .table-font-size-header {
-    font-size: 3rem;
+    font-size: 30px;
 }
 
 .table-font-size-data {
-    font-size: 2.5rem;
+    font-size: 15px;
 }
 
 .table-font-bold {
