--- a/src/app/pages/play-page/play-page.component.scss
+++ b/src/app/pages/play-page/play-page.component.scss
@@ -49,11 +49,16 @@ button.question-control {
     background-color: cadetblue;
     border-radius: 5px;
     height: 50px;
+    margin-left: 10px;
     border: none;
     color: white;
     width: 140px;
     font-weight: 600;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+button:disabled {
+    opacity: 0.5;
 }
 
 .music-counter-wrapper {
